[gd_scene load_steps=22 format=2]

[ext_resource path="res://levels/level_pedo/assets/png/aura_boss_2_sheet.png" type="Texture" id=1]
[ext_resource path="res://levels/level_pedo/enemy/enemy_pedo_normal.gd" type="Script" id=2]
[ext_resource path="res://levels/level_pedo/assets/png/jaique-enemigo-sheet.png" type="Texture" id=3]
[ext_resource path="res://overlap/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/level_pedo/assets/png/efecto acido sheet.png" type="Texture" id=5]
[ext_resource path="res://levels/level_pedo/assets/Audios/efecto acido.mp3" type="AudioStream" id=6]
[ext_resource path="res://levels/level_pedo/enemy/buffArea.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/level_pedo/assets/png/jaique_enemy_sheet_normal_f.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 623, 815 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 623, 0, 623, 815 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 1246, 0, 623, 815 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 9.54225
height = 0.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 12.1089
height = 38.0719

[sub_resource type="Animation" id=10]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 221, 472 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 221, 0, 221, 472 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 183, 289 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 183, 0, 183, 289 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="enemy_pedo_normal" type="KinematicBody2D" groups=[
"enemies",
]]
position = Vector2( -0.264862, 3.8147e-06 )
collision_layer = 16
collision_mask = 0
script = ExtResource( 2 )
drops = 5

[node name="aura_saiya" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1.89563, -28.5007 )
scale = Vector2( 0.159181, 0.120707 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 2
script = null

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0.134152, -21.224 )
shape = SubResource( 6 )

[node name="effectTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="lifeRed" type="ColorRect" parent="."]
visible = false
margin_left = -21.7027
margin_top = -70.5625
margin_right = 18.2973
margin_bottom = -68.5625
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeGreen" type="ColorRect" parent="."]
visible = false
margin_left = -20.8196
margin_top = -72.2499
margin_right = 19.1804
margin_bottom = -69.2499
color = Color( 0.168627, 0.992157, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="efecto_da√±o" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -8.261

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/got_hit = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 3.24889, -29.6029 )
scale = Vector2( 0.334044, 0.343209 )
texture = ExtResource( 5 )
hframes = 3

[node name="buffArea" parent="." instance=ExtResource( 7 )]

[node name="shieldTimer" type="Timer" parent="."]

[node name="sprites" type="Node2D" parent="."]

[node name="normal" type="AnimatedSprite" parent="sprites"]
position = Vector2( -4.46934, -28.5905 )
scale = Vector2( 0.209099, 0.150757 )
frames = SubResource( 9 )
playing = true

[node name="frozen" type="AnimatedSprite" parent="sprites"]
visible = false
position = Vector2( -5.17725, -26.2308 )
scale = Vector2( 0.294202, 0.271599 )
frames = SubResource( 13 )
frame = 1
playing = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="effectTimer" to="." method="_on_effectTimer_timeout"]
[connection signal="timeout" from="shieldTimer" to="." method="_on_shieldTimer_timeout"]

[editable path="HurtBox"]
